<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:gravity="center_horizontal"
        >
    <TextView android:id="@+id/help"
              android:text="@string/guess_number_help"
              android:layout_width="fill_parent"
              android:layout_height="50px"
              android:textSize="12px"
              android:singleLine="false"
              android:maxLines="3"
              android:scrollbars="vertical"
              android:textColor="@android:color/secondary_text_dark_nodisable"
            />
    <com.zekaoyunlari.ArtiEksiSayiView
        android:id="@+id/tahta"
        android:layout_width="300px"
        android:layout_height="300px"
        />
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:gravity="center_horizontal"
              android:layout_height="40px"
              android:layout_margin="5px"
        >
    <EditText
            android:id="@+id/answer"
            android:layout_width="90px"
            android:layout_height="40px"
            android:imeOptions="actionSend"
            android:inputType="numberDecimal" />

    <Button
            android:id="@+id/solve_game"
            android:text="@string/solve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    <Button
            android:id="@+id/new_game"
            android:text="@string/new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
</LinearLayout>
    <TextView android:id="@+id/info"
              android:text="00:00"
              android:textSize="12px"
              android:layout_width="fill_parent"
              android:layout_height="20px"
            />
</LinearLayout>

